# critnib

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  critnib.3  critnib.c  critnib.h  libcritnib.pod  main.c  pmdk-compat.h
.builds/: freebsd.yml
.github/workflows/: codeql.yml  coverity.yml
debian/: changelog  control  copyright  libcritnib0.symbols  libcritnib1.symbols  watch
debian/tests/: basic.c  control
tests/: .gitignore  1corr.c  CMakeLists.txt  Makefile  hmload.c  hmproto.h  inequal.c  iter  iter-cli.c  rand.c  th.c
